--- a/tutorial/package.json
+++ b/tutorial/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.23.12",
+    "gatsby-image": "^2.4.14",
+    "gatsby-plugin-sharp": "^2.6.25",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-transformer-sharp": "^2.5.12",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^5.1.1"
